Reject two cells reusing a cell id via a storage fingerprint
A cell id is operator-chosen free text, so the coordinator could not tell
replicas of one cell (same id, allowed) from two distinct cells reusing an id
(same id, different databases -- must be rejected). The latter was silently
conflated into one logical cell over two disjoint datastores, mis-routing
instances to nodes that do not hold them.

Introduce a cell fingerprint: a stable identity of the cell's shared storage
(Storage.fingerprint() -- JDBC URL hash, Cassandra keyspace, null for
in-memory which cannot be shared across processes). It travels node ->
coordinator on register (RegisteredNode.cell_fingerprint), persists per node
(CoordNode.cellFingerprint) across all four stores, and CoordinatorApi's guard
rejects a same-id/different-fingerprint registration. Null fingerprints are
exempt, so in-memory/legacy nodes are unaffected; the binding lives in the
live roster, so it clears once a cell drains.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01EqfHdvJST5eiFRLaZDJfWa